<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_password_reset">Kirim Permintaan</string>gu
    <string name="action_password_reset_short">Kirim</string>
    <string name="action_recover_short">Lupa Password ?</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Masuk</string>
    <string name="action_sign_up_short">Daftar</string>
    <string name="app_name">Skill Test</string>
    <string name="auth_grant_authorization">Memberikan Hak Akses</string>
    <string name="auth_no_previlege_access">Anda tidak mempunyai hak untuk aplikasi ini!</string>
    <string name="command_count">Hitung</string>
    <string name="command_reset">Reset</string>
    <string name="command_save">Simpan</string>
    <string name="command_send">Kirim</string>
    <string name="command_start">Start</string>
    <string name="command_stop">Stop</string>
    <string name="crash_toast_text">Kirim Laporan Kerusakan</string>
    <string name="default_notification_channel_id">counter</string>
    <string name="default_notification_channel_name">fitness-counter-student</string>
    <string name="error_field_required">Field dibutuhkan</string>
    <string name="error_incorrect_password">Password salah</string>
    <string name="error_invalid_email">Email tidak valid</string>
    <string name="error_invalid_password">Password terlalu pendek</string>
    <string name="error_password_not_same">Password tidak Sama</string>
    <string name="hint_vertical_jump_deviation">Selisih</string>
    <string name="hint_vertical_jump_loncatan_1">Loncatan 1</string>
    <string name="hint_vertical_jump_loncatan_2">Loncatan 2</string>
    <string name="hint_vertical_jump_loncatan_3">Locantan 3</string>
    <string name="hint_vertical_jump_raihan_tegak">Raihan Tegak</string>
    <string name="item_kesimpulan_no">Disarankan tidak mengikuti ujian keterampilan olahraga</string>
    <string name="item_kesimpulan_yes">Dapat mengikuti ujian keterampilan olahraga</string>
    <string name="item_mata_julig">Julig</string>
    <string name="item_mata_pms">Plus / Minus / Silinder</string>
    <string name="item_minus">–</string>
    <string name="item_normal">Normal</string>
    <string name="item_not_normal">Tidak</string>
    <string name="item_obstruksi">Obstruksi</string>
    <string name="item_plus">+</string>
    <string name="item_telinga_obstruktif">Serumen Obstruktif</string>
    <string name="item_telinga_tuli">Tuli</string>
    <string name="item_verbal_latah">Latah / Gagap</string>
    <string name="item_verbal_tuna">Tuna Wicara</string>
    <string name="label_auth_email_exists">Email telah terdaftar</string>
    <string name="label_auth_email_malformed">Email salah format</string>
    <string name="label_auth_email_not_exists">Email belum Terdaftar</string>
    <string name="label_auth_invalid_credential">User belum terdaftar</string>
    <string name="label_auth_network_issue">Terdapat kesalahan koneksi</string>
    <string name="label_auth_weak_password">Password terlalu mudah untuk dibobol</string>
    <string name="label_login_failed">Login Gagal</string>
    <string name="label_participant">No Peserta</string>
    <string name="label_participant_1">No Peserta 1</string>
    <string name="label_participant_2">No Peserta 2</string>
    <string name="label_participant_3">No Peserta 3</string>
    <string name="label_participant_4">No Peserta 4</string>
    <string name="label_participant_5">No Peserta 5</string>
    <string name="label_password_reset_failed">Permintaan Gagal Dilakukan</string>
    <string name="label_password_reset_success">Permintaan dikirm, cek email anda !</string>
    <string name="label_please_wait">Tunggu Sebentar</string>
    <string name="label_register_failed">Daftar Gagal</string>
    <string name="label_register_success">Pendaftaran Berhasil</string>
    <string name="label_try_to_login">Mencoba Login</string>
    <string name="label_try_to_register">Melakukan Pendaftaran</string>
    <string name="label_try_to_request_password_reset">Mengirim Permintaan</string>
    <string name="label_verification_failed">Verifikasi Gagal</string>
    <string name="label_verification_success">Verifikasi sukses dikirim ke alamat email</string>
    <string name="medical_check_item_aa">Anggota Gerak (Tangan dan Kaki)</string>
    <string name="medical_check_item_bmi">BMI</string>
    <string name="medical_check_item_bmi_explanation">BMI = Berat Badan : (Tinggi Badan Berdiri)²\nNormal antara 18 – 24,9</string>
    <string name="medical_check_item_denyut">Denyut Nadi Istirahat</string>
    <string name="medical_check_item_frekuensi">Frekuensi Pernapasan</string>
    <string name="medical_check_item_ictus">Ictus Cordis</string>
    <string name="medical_check_item_pernapasan_retraksi">Lokasi Retraksi</string>
    <string name="medical_check_item_pernapasan_saluran">Saluran Napas</string>
    <string name="medical_check_item_pernapasan_suara">Suara Napas</string>
    <string name="medical_check_item_postur">Postur</string>
    <string name="medical_check_item_postur_kifosis">Kifosis</string>
    <string name="medical_check_item_postur_lordosis">Lordosis</string>
    <string name="medical_check_item_postur_normal">Normal</string>
    <string name="medical_check_item_postur_skoliosis">Skoliosis</string>
    <string name="medical_check_item_ratio">Rasio (TBB-TBD)/TBD</string>
    <string name="medical_check_item_retraksi">Tanda Retraksi</string>
    <string name="medical_check_item_suara_jantung">Suara Jantung</string>
    <string name="medical_check_item_tbb">Tinggi Badan Berdiri (TBB)</string>
    <string name="medical_check_item_tekanan">Tekanan darah S/D</string>
    <string name="medical_check_item_weight">Berat Badan</string>
    <string name="medical_check_itm_tbd">Tinggi Badan Duduk (TBD)</string>
    <string name="medical_check_kesimpulan_description">Setelah mempertimbangkan hasil pemeriksaan, yang bersangkutan dinyatakan :</string>
    <string name="medical_check_menu_antropometri">Antropometri</string>
    <string name="medical_check_menu_kardiovaskular">Fungsi Kardiovaskular</string>
    <string name="medical_check_menu_kesimpulan">Kesimpulan</string>
    <string name="medical_check_menu_pernapasan">Fungsi Pernapasan</string>
    <string name="medical_check_menu_postur_aa">Postur dan Anggota Gerak</string>
    <string name="medical_check_menu_verbal">Indra dan Verbal</string>
    <string name="medical_check_verbal_item_bibir">Verbal</string>
    <string name="medical_check_verbal_item_mata">Mata (Penglihatan)</string>
    <string name="medical_check_verbal_item_telinga">Telinga (Pendegaran)</string>
    <string name="number_0">0</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_conf">Ulangi Password</string>
    <string name="radiobutton_aa_deformitas">Deformitas</string>
    <string name="radiobutton_aa_kelainan">Kelainan Gait</string>
    <string name="radiobutton_aa_kelemahan">Kelemahan</string>
    <string name="radiobutton_aa_normal">Normal</string>
    <string name="request_privilege">Tambah hak aksses ?</string>
    <string name="sign_in_question">Sudah Punya Akun ?</string>
    <string name="sign_up_question">Belum Punya Akun ?</string>
    <string name="slash_separator">/</string>
    <string name="template_stopwatch">00:00.000</string>
    <string name="title_activity_login">Masuk</string>
    <string name="title_activity_password_reset">Password Reset</string>
    <string name="title_activity_register">Daftar</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_tester_activity_dashboard">Dashboard</string>
    <string name="unit_bmi">kg/m²</string>
    <string name="unit_choose_one">Pilih salah\nsatu</string>
    <string name="unit_cm">cm</string>
    <string name="unit_denyut">x/menit\nnormal &lt; 100</string>
    <string name="unit_frekuensi_pernapasan">x/menit\nNormal : 18–24</string>
    <string name="unit_kg">kg</string>
    <string name="unit_ratio">normal antara\n(0,95 – 0,99)</string>
    <string name="unit_tekanan">mmHg</string>
    <string name="welcoming_text">SELAMAT DATANG</string>
    <string name="yes">Ya</string>
    <string name="command_add">Add</string>
    <string name="command_minus">Remove</string>
    <string name="command_clear">Kosongkan</string>
    <string name="action_logout">Logout</string>
</resources>
