<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/database_plus"
        android:title="@string/command_save"
        app:showAsAction="ifRoom" />
    <item
            android:id="@+id/action_add"
            android:icon="@drawable/plus"
            android:title="@string/command_add"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_remove"
            android:icon="@drawable/minus"
            android:title="@string/command_minus"
            app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_reset"
        android:icon="@drawable/reload"
        android:title="@string/command_reset"
        app:showAsAction="never" />
</menu>
